@@ -39,15 +39,20 @@ namespace fostlib {
         /// Represents a query string as generated by a form
         class FOST_INET_DECLSPEC query_string {
         public:
+            /// Construct an empty query string
             query_string();
-            query_string( const string & );
+            /// Construct a query string by parsing a string
+            query_string( const ascii_printable_string & );
 
+            /// Append a new value to the query string
             void append( const string &name, const nullable< string > &value );
+            /// Remove a key from the query string
             void remove( const string &name );
 
             nullable< ascii_printable_string > as_string() const;
 
         private:
+            nullable< ascii_printable_string > m_string;
             std::map< string, std::list< nullable< string > > > m_query;
         };
         enum t_form { e_pathname, e_encoded };
